# eng-lang

./: .gitattributes  .gitignore  Cargo.toml  LLM_CONTEXT.md  README.md  dev.bat  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
artifacts/docs/: README.md
benchmarks/: README.md
benchmarks/B01_csv_heat_rate/: README.md  expected.json  main.eng
benchmarks/B02_timeseries_fusion/: README.md  expected.json  main.eng
benchmarks/B03_state_space/: README.md  expected.json  main.eng
benchmarks/B04_residual_eval/: README.md  expected.json
benchmarks/B05_component_solver/: README.md  expected.json
benchmarks/B06_nonlinear_solver/: README.md  expected.json
crates/eng_cli/: Cargo.toml
crates/eng_cli/src/: example_smoke.rs  jit_bench.rs  main.rs
crates/eng_compiler/: Cargo.toml
crates/eng_ide/: Cargo.toml  tauri.conf.json
crates/eng_ide/capabilities/: main.json
crates/eng_ide/src/: main.rs
crates/eng_ide/tests/: editorSafety.test.js
crates/eng_ide/ui/: app.js  index.html  styles.css
crates/eng_jit/: Cargo.toml
crates/eng_lsp/: Cargo.toml
crates/eng_report/: Cargo.toml
crates/eng_runtime/: Cargo.toml
crates/eng_runtime/src/: artifact.rs  case_scheduler.rs  lib.rs  runtime_data.rs  vm.rs
crates/eng_runtime/src/solver/: assembly.rs  behavior.rs  diagnostics.rs  evaluator.rs  expression.rs  mod.rs  plan.rs  residual.rs  result.rs  state_space.rs  thermal.rs
crates/eng_runtime/src/solver/algorithms/: adaptive.rs  algebraic.rs  dae.rs  dynamic_component.rs  fixed_point.rs  fixed_step.rs  linear.rs  mod.rs  nonlinear.rs
docs/: README.md  roadmap.md
docs/architecture/: 00_system_overview.md  01_runtime_artifacts.md  02_compiler_frontend.md  03_expected_types_and_quantities.md  04_data_boundary.md
docs/archive/: usability_improvement_backlog_history.md
docs/current/: feature_maturity_matrix.md  generic_solver_completion_plan.md  implementation_issue_backlog.md  main_internal_status.md  philosophy.md  reviewability.md  solver_centered_plan.md  stable_core_scope.md  status.md  test_ci_gates.md  tracks.md  uncertainty.md  usability_improvement_backlog.md  v1_0_3_hardening.md  v1_1_uncertainty_gate.md  v1_2_data_driven_modeling_gate.md  v1_3_lsp_gate.md  v1_4_jit_gate.md  v1_5_standalone_gate.md  v2_0_domain_component_gate.md  version_plan.md  workflow_modules.md
docs/development/: 00_getting_started.md  01_repo_layout.md  02_daily_workflow.md  03_environment_reproducibility.md  04_version_roadmap_workflow.md  05_historical_stable_core_gap_audit.md  05_v1_0_gap_audit.md  docs_authoring.md  eng_doc_extract.md  index.md
docs/guide/: class_object.md  data_driven_modeling.md  domain_component.md  language_grammar.md  native_ide.md  plotting.md  report_review.md  timeseries_statistics.md  uncertainty.md
docs/internal/: README.md  implementation_issue_backlog.md
docs/language/: dimensionless.md  fast_assignment.md  string_formatting.md
docs/llm/: load_map.yml
docs/master-plan/: EngLang_LongTerm_Development_Master_Plan_v8.md  EngLang_LongTerm_Development_Master_Plan_v9.md  EngLang_v8_to_v9_Revision_Guide.md  current.md
docs/reference/: breaking_change_policy.md  cli_run.md  functions_imports.md  index.md  jit_benchmark.md  kernel_plan.md  lsp_snapshot.md  side_effect_policy.md  standalone_package.md  summary_object_decision.md  timeseries_expression_kernel.md  top_level_execution_policy.md
docs/release/: acceptance-checklist.md  release-state.md  release-workflow.md  v0.1-preview.md  v0.1.0.md  v0.2-preview.md  v0.3-preview.md  v0.4-preview.md  v0.5-preview.md  v0.6-preview.md  v0.7-alpha.md  v0.7-preview.md  v0.8-alpha.md  v0.8-preview.md  v0.9-alpha.md  v0.9-preview.md  v1.0-stable.md  v1.0.0.md  v1.0.1.md  v1.0.2.md  v1.0.3.md
docs/runtime/: bytecode.md
docs/schemas/: README.md  cache_manifest.schema.json  (+12 more)
examples/: README.md
scripts/: dev.ps1
stdlib/: README.md  prelude.eng  units.eng
(+646 files in other folders)
