[workspace]
members = [
    "crates/eng_cli",
    "crates/eng_compiler",
    "crates/eng_ide",
    "crates/eng_report",
    "crates/eng_runtime",
]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Gonie-Gonie/eng-lang"

[workspace.lints.rust]
unsafe_code = "forbid"
