[package]
name = "eng_cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
eng_compiler = { path = "../eng_compiler" }
eng_jit = { path = "../eng_jit" }
eng_runtime = { path = "../eng_runtime" }
serde_json = "1"

[[bin]]
name = "eng"
path = "src/main.rs"

[lints]
workspace = true
