[package]
name = "eng_ide"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "eng-ide"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.27", default-features = false, features = ["default_fonts", "glow"] }
eng_compiler = { path = "../eng_compiler" }
eng_runtime = { path = "../eng_runtime" }
rfd = "0.15"
serde_json = "1"

[lints]
workspace = true
