[package]
name = "eng_ide"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "eng-ide"
path = "src/main.rs"

[dependencies]
eng_compiler = { path = "../eng_compiler" }
eng_lsp = { path = "../eng_lsp" }
eng_runtime = { path = "../eng_runtime" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lints]
workspace = true
