[package]
name = "eng_runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
eng_compiler = { path = "../eng_compiler" }
eng_report = { path = "../eng_report" }
serde_json = "1"

[lib]
path = "src/lib.rs"

[lints]
workspace = true

