[package]
name = "eng_runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
eng_compiler = { path = "../eng_compiler" }
eng_report = { path = "../eng_report" }
serde_json = "1"
sha2 = "0.10"
toml = "0.8"
graphitesql = { version = "0.0.13", default-features = false, features = ["std"] }

[lib]
path = "src/lib.rs"

[lints]
workspace = true
